--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:api": "npx cypress run --spec \"cypress/e2e/at-api.cy.js\" -b chrome --headless"
   },
   "keywords": [],
   "author": "",
